--- a/apps/katib/upstream/components/mysql/pvc.yaml
+++ b/apps/katib/upstream/components/mysql/pvc.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  storageClassName: local-storage
   resources:
     requests:
       storage: 10Gi
